# TSDGenerator

./: .gitignore  README.md  pyproject.toml
examples/: Dockerfile  README.md  docker.py  example_abs.py
scripts/: blacklistedModules.json  getRunTimeInformation.linux.sh
tsdgenerator/: __init__.py  generate.py  utils.py
